force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Answer_Value__c</fullName>
    <label>Answer Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>