force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Answer_Value_All__c.field-meta.xml
<CustomField>
    <fullName>Answer_Value_All__c</fullName>
    <label>Answer Value (All)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>