force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Key_for_Saving__c.field-meta.xml
<CustomField>
    <fullName>Key_for_Saving__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Key for Upsert: Wellcome Call SF Id &amp; Welcome_Call_Questionnaire_Setup</inlineHelpText>
    <label>Key for Saving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>