force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Key_Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Key_Long_Text_Area__c</fullName>
    <label>Key Long Text Area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>