force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <formula>Welcome_Call_Questionnaire_Setup__r.Welcome_Call_Questionnaire__r.Questionnaire_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Label</label>
    <type>Text</type>
</CustomField>