force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Questionnaire_Label_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Label_Text_Area__c</fullName>
    <label>Questionnaire Label Text Area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>