force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/fields/Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Call</label>
    <referenceTo>WelcomeCall__c</referenceTo>
    <relationshipLabel>Welcome Call Questionnaire Link</relationshipLabel>
    <relationshipName>Welcome_Call_Questionnaire_Link</relationshipName>
    <type>Lookup</type>
</CustomField>