force-app/main/default/objects/Welcome_Call_Questionnaire_Link__c/validationRules/Unable_to_edit_Resolve_layout_page.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_edit_Resolve_layout_page</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(Welcome_Call__r.RecordType.Name, &quot;Resolve&quot;), OR(ISNEW(), ISCHANGED(Answer_Value__c)))</errorConditionFormula>
    <errorMessage>Unable to add or edit value at questionnaire section</errorMessage>
</ValidationRule>